# src/api/adminServiceSchemas.ts
@@ -183,11 +183,6 @@ export type OutputVisibility =
   | 'after_published'
 
 export type AutograderFeedback = {
-  scriptOutput?: string
-  /**
-   * @format double
-   */
-  retCode?: number
   tests: {
     extra_data?: {
       [key: string]: string
@@ -229,9 +224,19 @@ export type AutograderFeedback = {
   /**
    * @format double
    */
-  execution_time: number
+  score?: number
+}
+
+export type GradingScriptResult = {
+  grader_sha: string
+  feedback: AutograderFeedback
   /**
    * @format double
    */
-  score?: number
+  execution_time: number
+  output: string
+  /**
+   * @format double
+   */
+  ret_code: number
 }
